--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "cryptocompare": "^1.0.0",
     "d3": "^5.12.0",
+    "d3-legend": "^1.0.0",
+    "d3-svg-legend": "^2.25.6",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "lodash": "^4.17.11",
