--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "d3-svg-legend": "^2.25.6",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
-    "lodash": "^4.17.11",
+    "immutability-helper": "^3.0.1",
+    "lodash": "^4.17.15",
+    "npm": "^6.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
