--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "cryptocompare": "^1.0.0",
-    "d3": "^5.12.0",
+    "d3": "^5.14.1",
     "d3-legend": "^1.0.0",
     "d3-svg-legend": "^2.25.6",
     "font-awesome": "^4.7.0",
@@ -12,15 +12,16 @@
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.15",
     "npm": "^6.13.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-fontawesome": "^1.6.1",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "styled-components": "^4.2.0",
-    "styled-icons": "^8.1.0"
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.4.1",
+    "styled-icons": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
