--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "d3": "^5.14.2",
     "d3-legend": "^1.0.0",
     "d3-svg-legend": "^2.25.6",
+    "firebase": "^7.6.1",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "gh-pages": "^2.1.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
