--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-firestore": "^0.11.0",
     "redux-form": "^8.2.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.4.1",
     "styled-icons": "^8.6.0"
