lifetime chart built

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.4.1",
+    "styled-icons": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
